--- a/package.json
+++ b/package.json
@@ -10,12 +10,27 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^14.9.4",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "@reduxjs/toolkit": "^1.8.1",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.1",
+    "firebase": "9.6.11",
+    "formik": "^2.2.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-loading-spinner-overlay": "^3.0.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-web": "0.17.7",
+    "react-redux": "^7.2.4",
+    "react-thunk": "^1.0.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
