--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "4",
     "@react-native-firebase/app": "^14.9.4",
     "@react-native-firebase/firestore": "^14.9.4",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "@reduxjs/toolkit": "^1.8.1",
     "expo": "~45.0.0",
+    "expo-image-picker": "~13.1.1",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.1",
     "firebase": "9.6.11",
@@ -24,11 +26,13 @@
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-loading-spinner-overlay": "^3.0.0",
+    "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "react-redux": "^7.2.4",
     "react-thunk": "^1.0.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "yup": "^0.32.11"
