--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@gorhom/bottom-sheet": "4",
     "@react-native-firebase/app": "^14.9.4",
     "@react-native-firebase/firestore": "^14.9.4",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "@reduxjs/toolkit": "^1.8.1",
     "expo": "~45.0.0",
     "expo-image-picker": "~13.1.1",
+    "expo-location": "~14.2.2",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.1",
     "firebase": "9.6.11",
@@ -26,6 +28,7 @@
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-loading-spinner-overlay": "^3.0.0",
+    "react-native-maps": "0.30.2",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
